<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_main" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView"
            android:layout_width="193dp"
            android:layout_height="match_parent"

            android:layout_marginLeft="8dp"
            android:layout_marginTop="75dp"
            android:background="#ff9966"
            android:text="@string/Column_Food"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="194dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="75dp"
            android:background="#99ccff"
            android:text="@string/Column_Drinks"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/textView" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="120dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/Food-McDonalds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Food_McDonalds_string"
                android:onClick="goToGoogleMaps"/>

            <Button
                android:id="@+id/Food-KoreanFood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Food_Korean_string"
                android:onClick="goToGoogleMaps"/>

            <Button
                android:id="@+id/Food-JapaneseFood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Food_Japanese_string"
                android:onClick="goToGoogleMaps"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="120dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/Drink_BubbleTea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Drink_BubbleTea_string" />

            <Button
                android:id="@+id/Drink_Starbucks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Drink_Starbucks_string" />

            <Button
                android:id="@+id/Drink_TimHortons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Drink_TimHortons_string" />
        </LinearLayout>
    </LinearLayout>





</android.support.design.widget.CoordinatorLayout>